--- a/index.html
+++ b/index.html
@@ -53,6 +53,9 @@
               <li class="nav-item @@contact-active">
                 <a class="nav-link" href="support.html">Support</a>
               </li>
+              <li class="nav-item @@contact-active">
+                <a class="nav-link" href="faq.html">FAQ</a>
+              </li>
             </ul>
           </div>
         </nav>
@@ -190,8 +193,9 @@
                             <ul class="footer-gd-16">
                                 <li><a href="index.html">Home</a></li>
                                 <li><a href="about.html">About Us</a></li>
-                                <li><a href="careers.html">Events</a></li>
-                                <li><a href="support.html">Support</a></li>
+                                <li><a href="events.html">Events</a></li>
+                                <li><a href="career.html">Careers</a></li>
+                                <li><a href="support.html">How to Play</a></li>
                                 <li><a href="register.html">Download</a></li>
                             </ul>
                         </div>
