--- a/about.html
+++ b/about.html
@@ -26,13 +26,12 @@
           <span class="navbar-toggler-icon fa icon-close fa-times"></span>
           </span>
         </button>
-
         <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
           <ul class="navbar-nav ml-auto">
-            <li class="nav-item">
+            <li class="nav-item active">
               <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
             </li>
-            <li class="nav-item @@about-active active">
+            <li class="nav-item @@about-active">
               <a class="nav-link" href="about.html">About</a>
             </li>
             <li class="nav-item @@services-active">
@@ -46,6 +45,9 @@
             </li>
             <li class="nav-item @@contact-active">
               <a class="nav-link" href="support.html">Support</a>
+            </li>
+            <li class="nav-item @@contact-active">
+              <a class="nav-link" href="faq.html">FAQ</a>
             </li>
           </ul>
         </div>
