--- a/events.html
+++ b/events.html
@@ -35,7 +35,6 @@
           <span class="navbar-toggler-icon fa icon-close fa-times"></span>
           </span>
         </button>
-
         <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item active">
@@ -55,6 +54,9 @@
             </li>
             <li class="nav-item @@contact-active">
               <a class="nav-link" href="support.html">Support</a>
+            </li>
+            <li class="nav-item @@contact-active">
+              <a class="nav-link" href="faq.html">FAQ</a>
             </li>
           </ul>
         </div>
@@ -197,6 +199,7 @@ have decided to give out prizes to a  lucky winner</p>
   <footer>
     <!-- footer -->
     <section class="w3l-footer">
+
       <div class="w3l-footer-16-main py-5" style="background-color: #242464 !important">
         <div class="container">
             <div class="row">
@@ -207,8 +210,9 @@ have decided to give out prizes to a  lucky winner</p>
                             <ul class="footer-gd-16">
                                 <li><a href="index.html">Home</a></li>
                                 <li><a href="about.html">About Us</a></li>
-                                <li><a href="careers.html">Events</a></li>
-                                <li><a href="support.html">Support</a></li>
+                                <li><a href="events.html">Events</a></li>
+                                <li><a href="career.html">Careers</a></li>
+                                <li><a href="support.html">How to Play</a></li>
                                 <li><a href="register.html">Download</a></li>
                             </ul>
                         </div>
@@ -264,20 +268,21 @@ have decided to give out prizes to a  lucky winner</p>
             </div>
         </div>
     </div>
-
+        </div>
+      </div>
+      </div>
       <!-- Modal -->
       <div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog"
         aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered" role="document">
           <div class="modal-content">
             <img src="assets/images/bg.jpg" alt="P2W" />
-            <a href="about.html" class="btn btn-light theme-button" style="border-radius: 40px; position: absolute; bottom: 30px; left:30px;
-            color: #fff; background: #ab07d4; border: none;">Download Now</a>
+            <a href="p2w.html" class="btn btn-light theme-button" style="line-height: 2rem; padding: 0 20px; border-radius: 40px; position: absolute; bottom: 20px; left:20px; color: #fff; background: #ab07d4; border: none;">
+              Go To Event</a>
           </div>
         </div>
       </div>
       <!-- move top -->
-
       <button onclick="topFunction()" id="movetop" title="Go to top">
         <span class="fa fa-angle-up"></span>
       </button>
@@ -294,6 +299,7 @@ have decided to give out prizes to a  lucky winner</p>
             document.getElementById("movetop").style.display = "none";
           }
         }
+
         // When the user clicks on the button, scroll to the top of the document
         function topFunction() {
           document.body.scrollTop = 0;
