Updated footer links for new pages

--- a/register.html
+++ b/register.html
@@ -106,7 +106,7 @@
 
                                     </div>
                                     <div class="text-right">
-                                        <button class="btn-primary btn theme-button">Proceed to Payment</button>
+                                        <button class="btn-primary btn theme-button">Make Payment</button>
                                     </div>
                                 </form>
                             </div>
