--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
         <div class="container py-lg-3">
           <div class="row">
             <div class="col-md-12">
-              <div class="owl-three owl-carousel owl-theme">
+              <div class="owl-three owl-carousel owl-theme logo-view">
                 <div class="item">
                   <img src="assets/images/s1.jpg" alt="paintball arena" class="img-fluid">
                 </div>
@@ -337,6 +337,73 @@
     });
   </script>
   <!--//MENU-JS-->
+  <!-- script for customers -->
+<script>
+  $(document).ready(function () {
+    $('.owl-three').owlCarousel({
+      loop: true,
+      margin: 0,
+      nav: false,
+      responsiveClass: true,
+      autoplay: true,
+      autoplayTimeout: 5000,
+      autoplaySpeed: 1000,
+      autoplayHoverPause: false,
+      responsive: {
+        0: {
+          items: 1,
+          nav: false
+        },
+        480: {
+          items: 2,
+          nav: false
+        },
+        667: {
+          items: 2,
+          nav: false
+        },
+        1000: {
+          items: 4,
+          nav: false
+        }
+      }
+    })
+  })
+</script>
+<!-- //customers owlcarousel --><!-- script for customers -->
+<script>
+  $(document).ready(function () {
+    $('.owl-three').owlCarousel({
+      loop: true,
+      margin: 0,
+      nav: false,
+      responsiveClass: true,
+      autoplay: true,
+      autoplayTimeout: 5000,
+      autoplaySpeed: 1000,
+      autoplayHoverPause: false,
+      responsive: {
+        0: {
+          items: 1,
+          nav: false
+        },
+        480: {
+          items: 2,
+          nav: false
+        },
+        667: {
+          items: 2,
+          nav: false
+        },
+        1000: {
+          items: 4,
+          nav: false
+        }
+      }
+    })
+  })
+</script>
+<!-- //customers owlcarousel -->
 
   <!--  Bootstrap JS -->
   <script src="assets/js/bootstrap.min.js"></script>
