Customer Revision - Designed careers page - Added YouTube Video - Modified Payment button alignment

--- a/faq.html
+++ b/faq.html
@@ -193,8 +193,9 @@
                 </div>
                 <div class="contact-details">
                   <h4>Payment Account</h4>
-                  <h5>Merchant</h5>
-                  <p>Nuban: 0023456789</p>
+                  <h5>0123463519</h5>
+                  <p>BOAT ISLAND</p>
+                  <p>Guarantee Trust Bank</p>
                 </div>
               </div>
               <div class="contact-info">
