--- a/events.html
+++ b/events.html
@@ -107,16 +107,12 @@ have decided to give out prizes to a  lucky winner</p>
               <div class="products-content">
                 <div class="row">
                   <div class="col-md-4">
-                    <img src="assets/images/b5.jpg" class="img-fluid img-curve" alt="project image">
+                    <img src="assets/images/e2.png" class="img-fluid img-curve" alt="project image">
                   </div>
                   <div class="col-md-8 mt-md-0 mt-5">
                     <h3>Treasure Hunt</h3>
                     <p>
-                      Lorem ipsum dolor sit, adipisicing elit repudiandae perferendis dolores praesentium nulla
-                      quibusdam
-                      repellendus. consequatur minus
-                      aliquam corrupti blanditiis, necessitatibus consectetur modi ipsum natus accusantium sit pariatur.
-                    </p>
+                      Play to win IN THE METAVERSE Treasure Hunt challenge.</p>
                     <a href="#url" class="btn btn-outline-primary theme-button mt-3">Coming Soon</a>
                   </div>
                 </div>
