--- a/register.html
+++ b/register.html
@@ -105,7 +105,7 @@
                                             10 tokens</p>
 
                                     </div>
-                                    <div class="text-right">
+                                    <div class="text-right mt-3">
                                         <button class="btn-primary btn theme-button">Make Payment</button>
                                     </div>
                                 </form>
