--- a/p2w.html
+++ b/p2w.html
@@ -125,10 +125,11 @@
                                                 be a Gamer</li>
                                         </ul>
                                         <p>
-                                            <a href="#"><span class="fa fa-facebook ml fa-2x"></span></a>
-                                            <a href="#"><span class="fa fa-instagram ml fa-2x"></span></a>
-                                            <a href="#"><span class="fa fa-twitter ml fa-2x"></span></a>
-                                            <a href="#"><span class="fa fa-youtube ml fa-2x"></span></a>
+                                            <a href="https://www.facebook.com/BoatIsland/" target="_blank"><span class="fa fa-facebook ml fa-2x"></span></a>
+                                            <a href="https://instagram.com/boatislandvr?igshid=YmMyMTA2M2Y=" target="_blank"><span class="fa fa-instagram ml fa-2x"></span></a>
+                                            <a href="https://twitter.com/BoatIslandVr?t=4gl6FXBUVNQ5PS9kBvTP7w&s=09" target="_blank"><span class="fa fa-twitter ml fa-2x"></span></a>
+                                            <a href="https://youtu.be/yRh7N-CluiM" target="_blank"><span class="fa fa-youtube ml fa-2x"></span></a>
+                                            <a href="https://www.linkedin.com/company/boatisland/" target="_blank"><span class="fa fa-linkedin ml fa-2x"></span></a>
                                         </p>
                                     </div>
                                 </div>
@@ -205,14 +206,15 @@
                 </div>
                 <div class="columns-2 mt-lg-0 mt-3">
                     <ul class="social">
-                        <li><a href="#facebook"><span class="fa fa-facebook" aria-hidden="true"></span></a>
+                        <li><a href="https://www.facebook.com/BoatIsland" target="_blank"><span class="fa fa-facebook" aria-hidden="true"></span></a>
                         </li>
-                        <li><a href="#instagram"><span class="fa fa-instagram" aria-hidden="true"></span></a>
+                        <li><a href="https://instagram.com/boatislandvr?igshid=YmMyMTA2M2Y=" target="_blank"><span class="fa fa-instagram" aria-hidden="true"></span></a>
                         </li>
-                        <li><a href="#twitter"><span class="fa fa-twitter" aria-hidden="true"></span></a>
+                        <li><a href="https://twitter.com/BoatIslandVr?t=4gl6FXBUVNQ5PS9kBvTP7w&s=09" target="_blank"><span class="fa fa-twitter" aria-hidden="true"></span></a>
                         </li>
-                        <li><a href="#youtube"><span class="fa fa-youtube" aria-hidden="true"></span></a>
+                        <li><a href="https://youtu.be/yRh7N-CluiM" target="_blank"><span class="fa fa-youtube" aria-hidden="true"></span></a>
                         </li>
+                        <li><a href="https://www.linkedin.com/company/boatisland/" target="_blank"><span class="fa fa-linkedin" aria-hidden="true"></span></a></li>
                     </ul>
                 </div>
             </div>
@@ -220,18 +222,6 @@
             </div>
           </div>
           </div>
-          <!-- Modal -->
-          <div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog"
-            aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
-            <div class="modal-dialog modal-dialog-centered" role="document">
-              <div class="modal-content">
-                <img src="assets/images/bg.jpg" alt="P2W" />
-                <a href="p2w.html" class="btn btn-light theme-button" style="line-height: 2rem; padding: 0 20px; border-radius: 40px; position: absolute; bottom: 20px; left:20px; color: #fff; background: #ab07d4; border: none;">
-                  Go To Event</a>
-              </div>
-            </div>
-          </div>
-          <!-- move top -->
           <button onclick="topFunction()" id="movetop" title="Go to top">
             <span class="fa fa-angle-up"></span>
           </button>
@@ -303,9 +293,6 @@
 
     <!--  Bootstrap JS -->
     <script src="assets/js/bootstrap.min.js"></script>
-<<<<<<< HEAD
-=======
-
     <!-- Token Calculation  -->
     <script>
         $('#token').keyup(() => {
@@ -323,7 +310,6 @@
         }
         buyShells(parseInt($('#token').val()));
     </script>
->>>>>>> ed7c142bc4d676d2c1b568e7e3e7b14b87fc5832
 </body>
 
 </html>
