--- a/about.html
+++ b/about.html
@@ -28,10 +28,10 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
           <ul class="navbar-nav ml-auto">
-            <li class="nav-item active">
+            <li class="nav-item">
               <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
             </li>
-            <li class="nav-item @@about-active">
+            <li class="nav-item @@about-active active">
               <a class="nav-link" href="about.html">About</a>
             </li>
             <li class="nav-item @@services-active">
@@ -61,7 +61,6 @@
       <a href="index.html">Home</a> » <span class="breadcrumb_last" aria-current="page">About</span>
     </div>
   </nav>
-  </div>
   <main>
     <!-- /about breadcrumbs -->
     <section class="w3l-about1" id="about">
@@ -223,14 +222,15 @@
             </div>
             <div class="columns-2 mt-lg-0 mt-3">
                 <ul class="social">
-                    <li><a href="#facebook"><span class="fa fa-facebook" aria-hidden="true"></span></a>
+                    <li><a href="https://www.facebook.com/BoatIsland" target="_blank"><span class="fa fa-facebook" aria-hidden="true"></span></a>
                     </li>
-                    <li><a href="#instagram"><span class="fa fa-instagram" aria-hidden="true"></span></a>
+                    <li><a href="https://instagram.com/boatislandvr?igshid=YmMyMTA2M2Y=" target="_blank"><span class="fa fa-instagram" aria-hidden="true"></span></a>
                     </li>
-                    <li><a href="#twitter"><span class="fa fa-twitter" aria-hidden="true"></span></a>
+                    <li><a href="https://twitter.com/BoatIslandVr?t=4gl6FXBUVNQ5PS9kBvTP7w&s=09" target="_blank"><span class="fa fa-twitter" aria-hidden="true"></span></a>
                     </li>
-                    <li><a href="#youtube"><span class="fa fa-youtube" aria-hidden="true"></span></a>
+                    <li><a href="https://youtu.be/yRh7N-CluiM" target="_blank"><span class="fa fa-youtube" aria-hidden="true"></span></a>
                     </li>
+                    <li><a href="https://www.linkedin.com/company/boatisland/" target="_blank"><span class="fa fa-linkedin" aria-hidden="true"></span></a></li>
                 </ul>
             </div>
         </div>
@@ -316,8 +316,47 @@
       });
     });
   </script>
+  
   <!--//MENU-JS-->
 
+  <script src="assets/js/jquery.magnific-popup.min.js"></script>
+  <script>
+    $(document).ready(function () {
+      $('.popup-with-zoom-anim').magnificPopup({
+        type: 'inline',
+  
+        fixedContentPos: true,
+        fixedBgPos: true,
+  
+        overflowY: 'auto',
+  
+        closeBtnInside: true,
+        preloader: false,
+  
+        midClick: true,
+        removalDelay: 300,
+        mainClass: 'my-mfp-zoom-in'
+      });
+  
+      $('.popup-with-move-anim').magnificPopup({
+        type: 'inline',
+  
+        fixedContentPos: false,
+        fixedBgPos: true,
+  
+        overflowY: 'auto',
+  
+        closeBtnInside: true,
+        preloader: false,
+  
+        midClick: true,
+        removalDelay: 300,
+        mainClass: 'my-mfp-slide-bottom'
+      });
+    });
+  </script>
+  
+  
   <!--  Bootstrap JS -->
   <script src="assets/js/bootstrap.min.js"></script>
   <script>
