--- a/careers.html
+++ b/careers.html
@@ -129,10 +129,12 @@
                                         right:25px;
                                         top:0;" class="btn btn-outline-primary">Apply Now</button>
                                         <h3>Full Stack Developer </h3>
-                                        <p>Intrested Candidates for the available position should attach a copy of their Resume alongside
+                                        <p>Intrested Candidates for the available position should attach a copy of their
+                                            Resume alongside
                                             with other relevant qualification documents (if applicable),
-                                             to the following email <a href="mailto:boatislandvr@gmail.com" target="_blank">boatislandvr@gmail.com</a> 
-                                             Using the Job Title as the subject.</p>
+                                            to the following email <a href="mailto:boatislandvr@gmail.com"
+                                                target="_blank">boatislandvr@gmail.com</a>
+                                            Using the Job Title as the subject.</p>
                                     </li>
                                     <li class="shadow">
                                         <input type="checkbox" checked="">
@@ -144,8 +146,9 @@
                                         <h3>Business development and brand manager</h3>
                                         <p>Intrested Candidates should attach a copy of their Resume alongside
                                             with other relevant qualification documents (if applicable),
-                                             to the following email <a href="mailto:boatislandvr@gmail.com" target="_blank">boatislandvr@gmail.com</a> 
-                                             Using the Job Title as the subject. </p>
+                                            to the following email <a href="mailto:boatislandvr@gmail.com"
+                                                target="_blank">boatislandvr@gmail.com</a>
+                                            Using the Job Title as the subject. </p>
                                     </li>
                                     <li class="shadow">
                                         <input type="checkbox" checked="">
@@ -158,8 +161,9 @@
                                         <h3>VR/AR developer</h3>
                                         <p>Intrested Candidates should attach a copy of their Resume alongside
                                             with other relevant qualification documents (if applicable),
-                                             to the following email <a href="mailto:boatislandvr@gmail.com" target="_blank">boatislandvr@gmail.com</a> 
-                                             Using the Job Title as the subject.</p>
+                                            to the following email <a href="mailto:boatislandvr@gmail.com"
+                                                target="_blank">boatislandvr@gmail.com</a>
+                                            Using the Job Title as the subject.</p>
                                     </li>
                                     <li class="shadow">
                                         <input type="checkbox" checked="">
@@ -172,8 +176,9 @@
                                         <h3>Customer Instructor</h3>
                                         <p>Intrested Candidates should attach a copy of their Resume alongside
                                             with other relevant qualification documents (if applicable),
-                                             to the following email <a href="mailto:boatislandvr@gmail.com" target="_blank">boatislandvr@gmail.com</a> 
-                                             Using the Job Title as the subject.</p>
+                                            to the following email <a href="mailto:boatislandvr@gmail.com"
+                                                target="_blank">boatislandvr@gmail.com</a>
+                                            Using the Job Title as the subject.</p>
                                     </li>
                                     <li class="shadow">
                                         <input type="checkbox" checked="">
@@ -186,8 +191,9 @@
                                         <h3>VR influencer and guide</h3>
                                         <p>Intrested Candidates should attach a copy of their Resume alongside
                                             with other relevant qualification documents (if applicable),
-                                             to the following email <a href="mailto:boatislandvr@gmail.com" target="_blank">boatislandvr@gmail.com</a> 
-                                             Using the Job Title as the subject..</p>
+                                            to the following email <a href="mailto:boatislandvr@gmail.com"
+                                                target="_blank">boatislandvr@gmail.com</a>
+                                            Using the Job Title as the subject..</p>
                                     </li>
                                     <li class="shadow">
                                         <input type="checkbox" checked="">
@@ -200,8 +206,9 @@
                                         <h3>Social media and community manager</h3>
                                         <p>Intrested Candidates should attach a copy of their Resume alongside
                                             with other relevant qualification documents (if applicable),
-                                             to the following email <a href="mailto:boatislandvr@gmail.com" target="_blank">boatislandvr@gmail.com</a> 
-                                             Using the Job Title as the subject.</p>
+                                            to the following email <a href="mailto:boatislandvr@gmail.com"
+                                                target="_blank">boatislandvr@gmail.com</a>
+                                            Using the Job Title as the subject.</p>
                                     </li>
                                     <li class="shadow">
                                         <input type="checkbox" checked="">
@@ -214,9 +221,10 @@
                                         <h3>Customer support</h3>
                                         <p>Intrested Candidates should attach a copy of their Resume alongside
                                             with other relevant qualification documents (if applicable),
-                                             to the following email <a href="mailto:boatislandvr@gmail.com" target="_blank">boatislandvr@gmail.com</a> 
-                                             Using the Job Title as the subject.
-                                            </p>
+                                            to the following email <a href="mailto:boatislandvr@gmail.com"
+                                                target="_blank">boatislandvr@gmail.com</a>
+                                            Using the Job Title as the subject.
+                                        </p>
                                     </li>
                                 </ul>
                             </div>
@@ -288,32 +296,21 @@
                     </div>
                     <div class="columns-2 mt-lg-0 mt-3">
                         <ul class="social">
-                            <li><a href="#facebook"><span class="fa fa-facebook" aria-hidden="true"></span></a>
+                            <li><a href="https://www.facebook.com/BoatIsland" target="_blank"><span class="fa fa-facebook" aria-hidden="true"></span></a>
                             </li>
-                            <li><a href="#instagram"><span class="fa fa-instagram" aria-hidden="true"></span></a>
+                            <li><a href="https://instagram.com/boatislandvr?igshid=YmMyMTA2M2Y=" target="_blank"><span class="fa fa-instagram" aria-hidden="true"></span></a>
                             </li>
-                            <li><a href="#twitter"><span class="fa fa-twitter" aria-hidden="true"></span></a>
+                            <li><a href="https://twitter.com/BoatIslandVr?t=4gl6FXBUVNQ5PS9kBvTP7w&s=09" target="_blank"><span class="fa fa-twitter" aria-hidden="true"></span></a>
                             </li>
-                            <li><a href="#youtube"><span class="fa fa-youtube" aria-hidden="true"></span></a>
+                            <li><a href="https://youtu.be/yRh7N-CluiM" target="_blank"><span class="fa fa-youtube" aria-hidden="true"></span></a>
                             </li>
+                            <li><a href="https://www.linkedin.com/company/boatisland/" target="_blank"><span class="fa fa-linkedin" aria-hidden="true"></span></a></li>
                         </ul>
                     </div>
                 </div>
             </div>
             </div>
             </div>
-            </div>
-            <!-- Modal -->
-            <div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog"
-                aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
-                <div class="modal-dialog modal-dialog-centered" role="document">
-                    <div class="modal-content">
-                        <img src="assets/images/bg.jpg" alt="P2W" />
-                        <a href="p2w.html" class="btn btn-light theme-button"
-                            style="line-height: 2rem; padding: 0 20px; border-radius: 40px; position: absolute; bottom: 20px; left:20px; color: #fff; background: #ab07d4; border: none;">
-                            Go To Event</a>
-                    </div>
-                </div>
             </div>
             <!-- move top -->
             <button onclick="topFunction()" id="movetop" title="Go to top">
@@ -349,7 +346,43 @@
             </script>
         </section>
         <!-- //footer -->
-    </footer>
+    </footer> <!-- jQuery JS -->
+    <!-- <script src="assets/js/jquery-3.4.1.slim.min.js"></script> -->
+    <!-- jQuery JS -->
+    <script src="assets/js/jquery-1.9.1.min.js"></script>
+
+    <!--/MENU-JS-->
+    <script>
+        $(window).on("scroll", function () {
+            var scroll = $(window).scrollTop();
+
+            if (scroll >= 80) {
+                $("#site-header").addClass("nav-fixed");
+            } else {
+                $("#site-header").removeClass("nav-fixed");
+            }
+        });
+
+        //Main navigation Active Class Add Remove
+        $(".navbar-toggler").on("click", function () {
+            $("header").toggleClass("active");
+        });
+        $(document).on("ready", function () {
+            if ($(window).width() > 991) {
+                $("header").removeClass("active");
+            }
+            $(window).on("resize", function () {
+                if ($(window).width() > 991) {
+                    $("header").removeClass("active");
+                }
+            });
+        });
+    </script>
+
+    <!--//MENU-JS-->
+
+    <!--  Bootstrap JS -->
+    <script src="assets/js/bootstrap.min.js"></script>
 </body>
 
 </html>
