--- a/register.html
+++ b/register.html
@@ -176,14 +176,15 @@
               </div>
               <div class="columns-2 mt-lg-0 mt-3">
                   <ul class="social">
-                      <li><a href="#facebook"><span class="fa fa-facebook" aria-hidden="true"></span></a>
+                      <li><a href="https://www.facebook.com/BoatIsland" target="_blank"><span class="fa fa-facebook" aria-hidden="true"></span></a>
                       </li>
-                      <li><a href="#instagram"><span class="fa fa-instagram" aria-hidden="true"></span></a>
+                      <li><a href="https://instagram.com/boatislandvr?igshid=YmMyMTA2M2Y=" target="_blank"><span class="fa fa-instagram" aria-hidden="true"></span></a>
                       </li>
-                      <li><a href="#twitter"><span class="fa fa-twitter" aria-hidden="true"></span></a>
+                      <li><a href="https://twitter.com/BoatIslandVr?t=4gl6FXBUVNQ5PS9kBvTP7w&s=09" target="_blank"><span class="fa fa-twitter" aria-hidden="true"></span></a>
                       </li>
-                      <li><a href="#youtube"><span class="fa fa-youtube" aria-hidden="true"></span></a>
+                      <li><a href="https://youtu.be/yRh7N-CluiM" target="_blank"><span class="fa fa-youtube" aria-hidden="true"></span></a>
                       </li>
+                      <li><a href="https://www.linkedin.com/company/boatisland/" target="_blank"><span class="fa fa-linkedin" aria-hidden="true"></span></a></li>
                   </ul>
               </div>
           </div>
@@ -269,43 +270,6 @@
         });
     </script>
 
-    <script src="assets/js/jquery.magnific-popup.min.js"></script>
-    <script>
-        $(document).ready(function () {
-            $('.popup-with-zoom-anim').magnificPopup({
-                type: 'inline',
-
-                fixedContentPos: false,
-                fixedBgPos: true,
-
-                overflowY: 'auto',
-
-                closeBtnInside: true,
-                preloader: false,
-
-                midClick: true,
-                removalDelay: 300,
-                mainClass: 'my-mfp-zoom-in'
-            });
-
-            $('.popup-with-move-anim').magnificPopup({
-                type: 'inline',
-
-                fixedContentPos: false,
-                fixedBgPos: true,
-
-                overflowY: 'auto',
-
-                closeBtnInside: true,
-                preloader: false,
-
-                midClick: true,
-                removalDelay: 300,
-                mainClass: 'my-mfp-slide-bottom'
-            });
-        });
-    </script>
-
     <!--/MENU-JS-->
     <script>
         $(window).on("scroll", function () {
@@ -341,7 +305,7 @@
 
     <!-- Calculating  -->
     <script>
-        $('#token').keyup(() => {
+        $('#token').change(() => {
             let token = parseInt($('#token').val());
             if (token < 2)
                 shells = parseInt($('#token').val(2));
