Created Support Page

--- a/careers.html
+++ b/careers.html
@@ -112,7 +112,7 @@
         </section>
         <section>
 
-            <div class="w3l-faq-block py-5" id="faq">
+            <div class="w3l-faq-block py-5" id="openings">
                 <div class="container py-lg-5">
                     <div class="header-section text-center mx-auto">
                         <h3>Openings</h3>
@@ -128,7 +128,7 @@
                                         margin-top: 16px;
                                         right:25px;
                                         top:0;" class="btn btn-outline-primary">Apply Now</button>
-                                        <h3>Full Stack Developer </h3>
+                                        <h2>Full Stack Developer </h2>
                                         <p>Intrested Candidates for the available position should attach a copy of their
                                             Resume alongside
                                             with other relevant qualification documents (if applicable),
@@ -143,7 +143,7 @@
                                         margin-top: 16px;
                                         right:25px;
                                         top:0;" class="btn btn-outline-primary">Apply Now</button>
-                                        <h3>Business development and brand manager</h3>
+                                        <h2>Business development and brand manager</h2>
                                         <p>Intrested Candidates should attach a copy of their Resume alongside
                                             with other relevant qualification documents (if applicable),
                                             to the following email <a href="mailto:boatislandvr@gmail.com"
@@ -158,7 +158,7 @@
                                         margin-top: 16px;
                                         right:25px;
                                         top:0;" class="btn btn-outline-primary">Apply Now</button>
-                                        <h3>VR/AR developer</h3>
+                                        <h2>VR/AR developer</h2>
                                         <p>Intrested Candidates should attach a copy of their Resume alongside
                                             with other relevant qualification documents (if applicable),
                                             to the following email <a href="mailto:boatislandvr@gmail.com"
@@ -173,7 +173,7 @@
                                         margin-top: 16px;
                                         right:25px;
                                         top:0;" class="btn btn-outline-primary">Apply Now</button>
-                                        <h3>Customer Instructor</h3>
+                                        <h2>Customer Instructor</h2>
                                         <p>Intrested Candidates should attach a copy of their Resume alongside
                                             with other relevant qualification documents (if applicable),
                                             to the following email <a href="mailto:boatislandvr@gmail.com"
@@ -188,7 +188,7 @@
                                         margin-top: 16px;
                                         right:25px;
                                         top:0;" class="btn btn-outline-primary">Apply Now</button>
-                                        <h3>VR influencer and guide</h3>
+                                        <h2>VR influencer and guide</h2>
                                         <p>Intrested Candidates should attach a copy of their Resume alongside
                                             with other relevant qualification documents (if applicable),
                                             to the following email <a href="mailto:boatislandvr@gmail.com"
@@ -203,7 +203,7 @@
                                         margin-top: 16px;
                                         right:25px;
                                         top:0;" class="btn btn-outline-primary">Apply Now</button>
-                                        <h3>Social media and community manager</h3>
+                                        <h2>Social media and community manager</h2>
                                         <p>Intrested Candidates should attach a copy of their Resume alongside
                                             with other relevant qualification documents (if applicable),
                                             to the following email <a href="mailto:boatislandvr@gmail.com"
@@ -218,7 +218,7 @@
                                         margin-top: 16px;
                                         right:25px;
                                         top:0;" class="btn btn-outline-primary">Apply Now</button>
-                                        <h3>Customer support</h3>
+                                        <h2>Customer support</h2>
                                         <p>Intrested Candidates should attach a copy of their Resume alongside
                                             with other relevant qualification documents (if applicable),
                                             to the following email <a href="mailto:boatislandvr@gmail.com"
