--- a/events.html
+++ b/events.html
@@ -6,7 +6,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-  <title>Events &amp; Contests - BIVR</title>
+  <title>Events &amp; Contests - Boat Island</title>
 
   <!-- Template CSS -->
   <link rel="stylesheet" href="assets/css/style-starter.css">
@@ -37,7 +37,7 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
           <ul class="navbar-nav ml-auto">
-            <li class="nav-item active">
+            <li class="nav-item">
               <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item @@about-active">
@@ -46,7 +46,7 @@
             <li class="nav-item @@services-active">
               <a class="nav-link" href="careers.html">Careers</a>
             </li>
-            <li class="nav-item @@services-active">
+            <li class="nav-item @@services-active active">
               <a class="nav-link" href="events.html">Events</a>
             </li>
             <li class="nav-item ml-lg-3 ml-0 mt-lg-0 mt-3">
